[package]
name = "http-dumper"
version = "0.1.0"
edition = "2024"
authors = ["Ovidiu Ionescu"]
description = "A http server that dumps the full request to stdout"

[dependencies]
bytes = "1"
clap = { version ="4", features = ["derive"] }
http-body-util = "0"
hyper = { version = "1", features = ["full"] }
hyper-rustls = "0.27.7"
hyper-util = { version = "0", features = ["tokio"] }
rustls = "0.23.30"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.2"
